fix: add some additional spacing before footer

--- a/packages/arb-token-bridge-ui/src/styles/tailwind.css
+++ b/packages/arb-token-bridge-ui/src/styles/tailwind.css
@@ -143,6 +143,10 @@ input:checked + .slider:before {
   height: 80px;
 }
 
+.h-\[25vh\] {
+  height: 25vh;
+}
+
 /* min-h */
 .min-h-\[calc\(100vh\-80px\)\] {
   min-height: calc(100vh - 80px);
